--- a/Practise/Pandas_Learning/20 Sep/ClassroomSession1.ipynb
+++ b/Practise/Pandas_Learning/20 Sep/ClassroomSession1.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "11d10972-6862-432b-8789-fd0f4045552b",
    "metadata": {},
    "outputs": [
@@ -163,14 +163,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a    t\n",
-      "b    e\n",
-      "c    s\n",
-      "d    t\n",
-      "e    l\n",
-      "f    e\n",
-      "g    a\n",
-      "h    f\n",
+      "A    t\n",
+      "B    e\n",
+      "C    s\n",
+      "D    t\n",
+      "E    i\n",
+      "F    n\n",
+      "G    g\n",
       "dtype: object\n"
      ]
     }
@@ -178,8 +177,8 @@
    "source": [
     "#Custom Index\n",
     "\n",
-    "word = 'testleaf'\n",
-    "start = 97\n",
+    "word = 'testing'\n",
+    "start = 65\n",
     "indx = []\n",
     "for (index,i) in enumerate(word):\n",
     "    indx.append(chr(start + index))\n",
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "6d66047e-af69-48ad-b33f-7088c4881ebf",
    "metadata": {},
    "outputs": [
@@ -197,24 +196,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a    t\n",
-      "b    e\n",
-      "c    s\n",
-      "d    t\n",
-      "e    l\n",
-      "f    e\n",
+      "A    t\n",
+      "B    e\n",
+      "C    s\n",
+      "D    t\n",
+      "E    i\n",
+      "F    n\n",
       "dtype: object\n",
-      "b    e\n",
-      "c    s\n",
-      "d    t\n",
+      "B    e\n",
+      "C    s\n",
+      "D    t\n",
       "dtype: object\n"
      ]
     }
    ],
    "source": [
     "#loc and iloc\n",
-    "\n",
-    "print(srs.loc['a':'f'])\n",
+    "print(srs.loc['A':'F'])\n",
     "print(srs.iloc[1:4])"
    ]
   },
@@ -245,12 +243,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "id": "7dd5ab75-078b-43bc-92ec-7c9f19391f70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     100\n",
+      "1     101\n",
+      "2     102\n",
+      "3     103\n",
+      "4     104\n",
+      "5     105\n",
+      "6     106\n",
+      "7     107\n",
+      "8     108\n",
+      "9     109\n",
+      "10    110\n",
+      "11    111\n",
+      "12    112\n",
+      "13    113\n",
+      "14    114\n",
+      "15    115\n",
+      "16    116\n",
+      "17    117\n",
+      "18    118\n",
+      "19    119\n",
+      "20    120\n",
+      "21    121\n",
+      "22    122\n",
+      "23    123\n",
+      "24    124\n",
+      "25    125\n",
+      "26    126\n",
+      "27    127\n",
+      "28    128\n",
+      "29    129\n",
+      "30    130\n",
+      "31    131\n",
+      "32    132\n",
+      "33    133\n",
+      "34    134\n",
+      "35    135\n",
+      "36    136\n",
+      "37    137\n",
+      "38    138\n",
+      "39    139\n",
+      "40    140\n",
+      "41    141\n",
+      "42    142\n",
+      "43    143\n",
+      "44    144\n",
+      "45    145\n",
+      "46    146\n",
+      "47    147\n",
+      "48    148\n",
+      "49    149\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "data1 = pd.Series(np.array(range(100,150)))"
+    "data1 = pd.Series(np.array(range(100,150)))\n",
+    "print(data1)"
    ]
   },
   {
@@ -365,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 20,
    "id": "62fbceb3-252d-4f37-ba55-1f9aab0217a7",
    "metadata": {},
    "outputs": [
@@ -385,6 +442,7 @@
     }
    ],
    "source": [
+    "data1.iloc[49] = None\n",
     "data1.info()"
    ]
   },
@@ -612,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 22,
    "id": "d391c493-73c7-4108-b729-0378288560d1",
    "metadata": {},
    "outputs": [
@@ -631,11 +689,11 @@
       "2    50.0\n",
       "3    20.0\n",
       "dtype: float64\n",
-      "0         20.0\n",
-      "1         30.0\n",
-      "2         50.0\n",
-      "3         20.0\n",
-      "4    1000000.0\n",
+      "0    20.0\n",
+      "1    30.0\n",
+      "2    50.0\n",
+      "3    20.0\n",
+      "4    10.0\n",
       "dtype: float64\n"
      ]
     }
@@ -644,13 +702,13 @@
     "s = pd.Series([20, 30, 50, 20, None])\n",
     "print(s)\n",
     "print(s.dropna())\n",
-    "print(s.fillna(1000000))"
+    "print(s.fillna(10))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7534655-698b-4026-8b83-8f58f7a53244",
+   "id": "3608702a-1d82-4b18-a47d-529705dd076e",
    "metadata": {},
    "outputs": [],
    "source": []
