matplotlib - classroom assignments

--- a/Week 4/analysis/Assignment_Week4.ipynb
+++ b/Week 4/analysis/Assignment_Week4.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "a48b8982-0cfc-4e94-8be4-b85e925ebf49",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "5df3f863-887e-4032-86ba-96d5631a890a",
    "metadata": {
     "scrolled": true
@@ -412,24 +412,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "f0404910-0a77-4582-866b-c583de27949d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "173    US\n",
-       "Name: Country/Region, dtype: object"
+       "'US'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df ['Country/Region'] [df['Confirmed'] == df['Confirmed'].max()]"
+    "#df ['Country/Region'] [df['Confirmed'] == df['Confirmed'].max()]\n",
+    "df.iloc[df['Confirmed'].idxmax()]['Country/Region']"
    ]
   },
   {
