--- a/Week 4/analysis/Assignment_Week4.ipynb
+++ b/Week 4/analysis/Assignment_Week4.ipynb
@@ -705,7 +705,7 @@
     }
    ],
    "source": [
-    "df['Country/Region'] [df['Deaths'] == df['Deaths'].min()]"
+    "df['Country/Region'] [df['Deaths'] == df['Deaths'].min()]\n"
    ]
   },
   {
